build_output.txt

> build
> vite build

vite v8.0.8 building client environment for production...
[2Ktransforming...✓ 156 modules transformed.
✗ Build failed in 705ms
error during build:
Build failed with 1 error:

[plugin vite:vue] /home/daha/DEV/DAZO/PROJECT/resources/js/views/wiki/WikiDetail.vue:undefined:undefined
SyntaxError: v-else/v-else-if has no adjacent v-if or v-else-if.

/home/daha/DEV/DAZO/PROJECT/resources/js/views/wiki/WikiDetail.vue
102|      />
103|  
104|      <div v-else-if="!loading" class="page-body">
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
105|         <EmptyState message="Cet article n'existe pas ou n'est plus disponible." />
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
106|         <div class="text-center mt-24">
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
107|           <router-link to="/wiki" class="btn btn-primary">Retour au centre d'aide</router-link>
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
108|         </div>
   |  ^^^^^^^^^^^^^
109|      </div>
   |  ^^^^^^^^^^
    at createCompilerError (/home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:1374:17)
    at processIf (/home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:4697:11)
    at /home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:4607:12
    at Array.<anonymous> (/home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:3606:26)
    at traverseNode (/home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:3548:38)
    at traverseChildren (/home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:3540:5)
    at traverseNode (/home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:3583:7)
    at traverseChildren (/home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:3540:5)
    at traverseNode (/home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:3583:7)
    at transform (/home/daha/DEV/DAZO/PROJECT/node_modules/@vue/compiler-core/dist/compiler-core.cjs.prod.js:3479:3)
    at aggregateBindingErrorsIntoJsError (file:///home/daha/DEV/DAZO/PROJECT/node_modules/rolldown/dist/shared/error-w0u7biK-.mjs:48:18)
    at unwrapBindingResult (file:///home/daha/DEV/DAZO/PROJECT/node_modules/rolldown/dist/shared/error-w0u7biK-.mjs:18:128)
    at #build (file:///home/daha/DEV/DAZO/PROJECT/node_modules/rolldown/dist/shared/rolldown-build-DtGk-m96.mjs:3313:34)
    at async buildEnvironment (file:///home/daha/DEV/DAZO/PROJECT/node_modules/vite/dist/node/chunks/node.js:32954:64)
    at async Object.build (file:///home/daha/DEV/DAZO/PROJECT/node_modules/vite/dist/node/chunks/node.js:33376:19)
    at async Object.buildApp (file:///home/daha/DEV/DAZO/PROJECT/node_modules/vite/dist/node/chunks/node.js:33373:153)
    at async CAC.<anonymous> (file:///home/daha/DEV/DAZO/PROJECT/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}
